[project]
name = "pocket-joe-mcp-toys"
version = "0.1.0"
description = "MCP servers built with pocket-joe - YouTube transcription and more"
requires-python = ">=3.12"
dependencies = [
    "pocket-joe",
    "fastmcp>=2.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "youtube-transcript-api>=0.6.0",
]